[gd_scene load_steps=25 format=3 uid="uid://ivqpaddn2mfn"]

[ext_resource type="Script" path="res://Scripts/Main/title_screen.gd" id="1_kwkst"]
[ext_resource type="Texture2D" uid="uid://crks3lgq7kbw5" path="res://Assets/Animations/portal2_atlas.png" id="2_o25c4"]
[ext_resource type="Texture2D" uid="uid://bx4iaoskpmgl6" path="res://Assets/Background/front.png" id="3_o514f"]
[ext_resource type="Theme" uid="uid://ba3nbvmkw7acy" path="res://Assets/Themes/Buttons.tres" id="4_6rvj6"]
[ext_resource type="FontFile" uid="uid://bojdo3yh6x40l" path="res://Assets/Font/alagard.ttf" id="5_nowga"]
[ext_resource type="Texture2D" uid="uid://mgcths5otwm6" path="res://Assets/Dark Fantasy/Slider_components3.png" id="6_w3xxl"]
[ext_resource type="Texture2D" uid="uid://cqlpre2bqlvwp" path="res://Assets/Dark Fantasy/Big Slider_components3.png" id="7_w7s2m"]
[ext_resource type="AudioStream" uid="uid://dn0annnj17k6w" path="res://Audio/750217__nancy_sinclair__emotional-piano-and-haunting-strings.mp3" id="8_4c8p0"]
[ext_resource type="AudioStream" uid="uid://vjnshk7ft7ib" path="res://Audio/switch17.wav" id="9_r6w16"]

[sub_resource type="AtlasTexture" id="AtlasTexture_s1eqe"]
atlas = ExtResource("2_o25c4")
region = Rect2(576, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_biflw"]
atlas = ExtResource("2_o25c4")
region = Rect2(512, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_cuq6p"]
atlas = ExtResource("2_o25c4")
region = Rect2(448, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_gwpvw"]
atlas = ExtResource("2_o25c4")
region = Rect2(384, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6bvwm"]
atlas = ExtResource("2_o25c4")
region = Rect2(320, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_lehuf"]
atlas = ExtResource("2_o25c4")
region = Rect2(256, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_topln"]
atlas = ExtResource("2_o25c4")
region = Rect2(192, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6tfcn"]
atlas = ExtResource("2_o25c4")
region = Rect2(128, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5ugpt"]
atlas = ExtResource("2_o25c4")
region = Rect2(64, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ppjgr"]
atlas = ExtResource("2_o25c4")
region = Rect2(0, 256, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_nt7qa"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_s1eqe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_biflw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cuq6p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gwpvw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6bvwm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lehuf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_topln")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6tfcn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5ugpt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ppjgr")
}],
"loop": true,
"name": &"default",
"speed": 15.0
}]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7rb2r"]
bg_color = Color(0.521569, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vuxgb"]
bg_color = Color(0.521569, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bxlt5"]
bg_color = Color(0.521569, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vmgmw"]
bg_color = Color(0.521569, 0, 0, 1)

[node name="TitleScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_kwkst")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(680, 584)
scale = Vector2(17.875, 13.125)
sprite_frames = SubResource("SpriteFrames_nt7qa")
autoplay = "default"
frame_progress = 0.784662

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0
texture = ExtResource("3_o514f")

[node name="StartButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.44
anchor_right = 0.5
anchor_bottom = 0.44
offset_left = -128.0
offset_top = 156.8
offset_right = 128.0
offset_bottom = 308.8
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("4_6rvj6")
theme_override_fonts/font = ExtResource("5_nowga")
theme_override_font_sizes/font_size = 40
text = "Start Game"

[node name="QuitButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -104.0
offset_top = 300.0
offset_right = 104.0
offset_bottom = 428.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("4_6rvj6")
theme_override_fonts/font = ExtResource("5_nowga")
theme_override_font_sizes/font_size = 40
text = "Quit"

[node name="MusicSlider" type="VSlider" parent="."]
layout_mode = 0
offset_left = 1672.0
offset_top = 576.0
offset_right = 1691.0
offset_bottom = 730.0
scale = Vector2(2.5, 2.5)
theme_override_icons/grabber = ExtResource("6_w3xxl")
theme_override_icons/grabber_highlight = ExtResource("7_w7s2m")
theme_override_styles/grabber_area = SubResource("StyleBoxFlat_7rb2r")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxFlat_vuxgb")
max_value = 1.0
step = 0.001

[node name="SFXSlider" type="VSlider" parent="."]
layout_mode = 0
offset_left = 1800.0
offset_top = 576.0
offset_right = 1819.0
offset_bottom = 730.0
scale = Vector2(2.5, 2.5)
theme_override_icons/grabber = ExtResource("6_w3xxl")
theme_override_icons/grabber_highlight = ExtResource("7_w7s2m")
theme_override_styles/grabber_area = SubResource("StyleBoxFlat_bxlt5")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxFlat_vmgmw")
max_value = 1.0
step = 0.001

[node name="music" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_4c8p0")
autoplay = true
bus = &"Music"

[node name="sfx" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_r6w16")
bus = &"SFX"

[node name="SFXButton" type="Button" parent="."]
layout_mode = 0
offset_left = 1378.0
offset_top = 988.0
offset_right = 1564.0
offset_bottom = 1032.0
theme_override_fonts/font = ExtResource("5_nowga")
text = "Make Noise
"

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 1640.0
offset_top = 968.0
offset_right = 1752.0
offset_bottom = 1008.0
color = Color(0.136826, 0.136826, 0.136826, 1)

[node name="Label" type="Label" parent="ColorRect"]
layout_mode = 0
offset_left = 16.0
offset_top = 8.0
offset_right = 96.0
offset_bottom = 31.0
theme_override_fonts/font = ExtResource("5_nowga")
text = "Music
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ColorRect2" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 1768.0
offset_top = 968.0
offset_right = 1880.0
offset_bottom = 1008.0
color = Color(0.137255, 0.137255, 0.137255, 1)

[node name="Label2" type="Label" parent="ColorRect2"]
layout_mode = 0
offset_left = 16.0
offset_top = 8.0
offset_right = 96.0
offset_bottom = 31.0
theme_override_fonts/font = ExtResource("5_nowga")
text = "SFX"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_top = 80.0
offset_right = 1920.0
offset_bottom = 448.0
theme_override_fonts/font = ExtResource("5_nowga")
theme_override_font_sizes/font_size = 100
text = "Schrodinger's Loot
"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="mouse_exited" from="MusicSlider" to="." method="_on_music_slider_mouse_exited"]
[connection signal="ready" from="MusicSlider" to="." method="_on_music_slider_ready"]
[connection signal="value_changed" from="MusicSlider" to="." method="_on_music_slider_value_changed"]
[connection signal="mouse_exited" from="SFXSlider" to="." method="_on_sfx_slider_mouse_exited"]
[connection signal="ready" from="SFXSlider" to="." method="_on_sfx_slider_ready"]
[connection signal="value_changed" from="SFXSlider" to="." method="_on_sfx_slider_value_changed"]
[connection signal="pressed" from="SFXButton" to="." method="_on_sfx_button_pressed"]
